# python-project-standards

./: .bumpversion.toml  CHANGELOG.md  README.md
.cursor/rules/: changelog-alignment.mdc  dependency-pinning.mdc  strenum-string-enums.mdc
.github/instructions/: github-actions.instructions.md  markdown-documentation.instructions.md  shell-scripts.instructions.md  standards-repository.instructions.md  templates-bundle.instructions.md
.github/workflows/: release-on-tag.yml  reusable-lint.yml  reusable-pre-commit.yml  reusable-test-matrix.yml
docs/: development.md  migration-guide.md  reusable-workflows.md  string-enums.md  versioning.md
scripts/: check_lint_baseline.py  finalize_standards_changelog.py  publish_github_release.py  standards_release_bump.sh  verify-standards.sh
templates/baselines/: DIGESTS  expected-mypy.json  ruff.toml
templates/cursor-rules/: commit-message-convention.mdc  documentation-toc.mdc  pr-description-workflow.mdc  strenum-string-enums.mdc
templates/github-workflows/: lint.yml  test.yml
templates/pre-commit/: .pre-commit-config.yaml
templates/pyproject/: pyproject.toml
templates/scripts/: check_lint_baseline.py  verify-standards.sh
