[build-system]
requires = ["setuptools==75.2.0", "wheel==0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "your-project-name"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
  "pre-commit==4.5.1",
  "ruff==0.15.9",
  "mypy==1.18.2",
  "pytest==8.4.2",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = []

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
disallow_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
